# Mealkey-Ai

./: $null  .env.example  .gitignore  .vercelignore  README.md  TEST_REPORT.md  debug-login-failure.md  docker-compose.agents.yml  docker-compose.yml  files.txt  package-lock.json  package.json  temp_find.txt  tsconfig.json  vercel.json
.vercel/: project.json
M-BIZ/: M-BIZ_ECC_RuleEngine_RuleBase_V1.md  M-BIZ_专业判断模型设计文档_V1.md  M-BIZ_商业模式专业判断模型.md  M-BIZ_商业模式专业判断模型_Agent对接文档规范.md  M-BIZ_知识资产体系设计文档_V1.md  MealKey_FounderIntelligenceLayer_创业认知链.md  README.md  docker-compose.yml  turbo.json  vercel.json
M-ED/: .env.example  .vercelignore
M-MKT/: .coverage
M-MKT/agents/m-mkt/: pyproject.toml
M-MKT/agents/m-mkt/docs/: 六维模型规范.md
M-MKT/agents/m-mkt/src/adapters/: __init__.py  platform_data.py
M-MKT/agents/m-mkt/src/core/: cli.py  exceptions.py  models.py
M-MKT/agents/m-mkt/src/core/knowledge/: case.py  category.py
M-MKT/agents/m-mkt/src/core/knowledge/data/: city_profiles.py
M-MKT/agents/m-mkt/tests/: test_definitions.py  test_exceptions.py  test_knowledge.py
M-OPS-Agent/: .env.example  .gitignore  README.md  package-lock.json  package.json  skill.restaurant-diagnosis.v1.json
agents/: README.md
docs/: AGENTS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION_REPORT.md  AUTHORITY.md  BLOB_STORAGE.md  BUSINESS_ANALYSIS_OUTPUT_TEMPLATE_V1.md  BUSINESS_POINTS_V1.md  BUSINESS_SIGNAL_ENGINE_DATA_CONTRACT_V1.md  BUSINESS_SIGNAL_ENGINE_V1.md  CONSULTING_AGENTS_FREEZE_V1.md  CONSULTING_ENGINE_CAPABILITY_STACK.md  CONSULTING_SIX_STEP_AGENTS_FREEZE.md  CONSULTING_SUBSTANCE_BAR.md  COUNCIL_PROTOCOL_GAP_ANALYSIS.md  COUNCIL_PROTOCOL_V1_COMPLETION.md  COUNCIL_PROTOCOL_V1_FREEZE.md  ENGINE_TO_COUNCIL_INTEGRATION_STATUS.md  EVIDENCE_CHAIN_PROTOCOL_V1.md  FOUNDER_LAYER_ADAPTER_MEETING_CONTRACT_DESIGN_V1.md  FOUNDER_OS_AGENT_GATEWAY_CONTRACT_V1.md  FOUNDER_OS_COUNCIL_INTELLIGENCE_4PLUS1_V1.md  FOUNDER_OS_COUNCIL_INTELLIGENCE_GOVERNANCE_AUDIT_V1.md  FOUNDER_OS_COUNCIL_KNOWLEDGE_ASSETS_V1.md  FOUNDER_OS_COUNCIL_MEETING_ENGINE_V1.md  FOUNDER_OS_COUNCIL_PERSONA_V2.md  (+112 more)
(+1472 files in other folders)
